@@ -684,6 +684,8 @@
 #define MENU_MOVIE_RECENT               40354
 #define ID_GAME_LOADLASTMOVIE           40355
 #define FCEUX_CONTEXT_LOADLASTMOVIE     40356
+#define ID_GAME_SAVEMOVIEAS             40357
+#define FCEUX_CONTEXT_SAVEMOVIEAS       40358
 #define IDC_DEBUGGER_ICONTRAY           55535
 #define MW_ValueLabel2                  65423
 #define MW_ValueLabel1                  65426
@@ -693,7 +695,7 @@
 #ifdef APSTUDIO_INVOKED
 #ifndef APSTUDIO_READONLY_SYMBOLS
 #define _APS_NEXT_RESOURCE_VALUE        125
-#define _APS_NEXT_COMMAND_VALUE         40357
+#define _APS_NEXT_COMMAND_VALUE         40359
 #define _APS_NEXT_CONTROL_VALUE         1204
 #define _APS_NEXT_SYMED_VALUE           101
 #endif
